boundary-tests/tests/fixtures/core_uses_tools.rs
// skycode-core must never import from skycode-tools.
use skycode_tools::tools::apply::ApplyError;

fn main() {
    let _ = std::mem::size_of::<ApplyError>();
}
